# bb-browser

./: WORKSPACE
cmd/bb_browser/: BUILD.bazel
cmd/bb_browser/frontend/: BUILD.bazel  Main.elm
cmd/bb_browser/frontend/Page/: NotFound.elm  Welcome.elm
cmd/bb_browser/templates/: page_welcome.html
